# lab03

.github/workflows/: build.yml  rmp.yml
solver_application/: CMakeLists.txt
solver_lib/: .CMakeLists.tzt.swp
